headline2: fixing text cutting off

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -72,7 +72,6 @@ body {
   font-size: clamp(1.875rem, 3.472vw, 3.75rem);
   color: rgba(var(--text), 1);
   font-weight: 700;
-  margin-left: -0.3vw;
 
   @media screen and (max-width: 600px){
     margin-left: -0.15vw;
